Deleting old stuff and tweaking post hygiene

--- a/docs/_posts/2020-10-01-wsus-port-80.md
+++ b/docs/_posts/2020-10-01-wsus-port-80.md
@@ -31,18 +31,18 @@ It's important to note that the originating port will be random, somewhere in th
 
 ### wsusutil
 
-If you see port 80, then you need to set the "custom website" to `false`. If you see 8530 then you need to set it to `true`. This is deceptively simple. The official documentation is here: https://docs.microsoft.com/de-de/security-updates/windowsupdateservices/18127395
+If you see port 80, then you need to set the "custom website" to `false`. If you see 8530 then you need to set it to `true`. This is deceptively simple. The [official Microsoft documentation for WSUSutil is here.](https://docs.microsoft.com/de-de/security-updates/windowsupdateservices/18127395)
 
 But for your convenience:
 
 Set it to 8530:
 ```
-%drive%\Program Files\Update Services\Tools\wsusutil usecustomwebsite true
+%ProgramFiles%\Update Services\Tools\wsusutil usecustomwebsite true
 ```
 
 Set it to 80:
 ```
-%drive%\Program Files\Update Services\Tools\wsusutil usecustomwebsite false
+%ProgramFiles%\Update Services\Tools\wsusutil usecustomwebsite false
 ```
 
 This change, for me, has been completely non-destructive and reversible.
