new post about IOPs

--- a/docs/_posts/2020-09-30-wsus-port-80.md
+++ b/docs/_posts/2020-09-30-wsus-port-80.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: "WSUS Port 80 vs 8530"
-date: 2020-10-01
+date: 2020-09-30
 description: Revisiting WSUS after too many years
 ---
 
@@ -27,7 +27,7 @@ PROTOCOL  DESTINATION         SOURCE                STATUS
  TCP      <local IP>:8530     <client IP>:50000     ESTABLISHED
 ```
 
-It's important to note that the originating port will be random, somewhere in the 50,000's to 60,000's by default. If it looks like the first.
+It's important to note that the originating port will be random, somewhere in the 50,000's to 60,000's by default. If it looks like the first. Equally important, if you don't see clients trying to connect, then you may have a firewall issue! 
 
 ### wsusutil
 
